feat(#5): implemented evaluate action
