# actions/get.ts
@@ -35,6 +35,13 @@ export const type = {
     controller: controller.type
 }
 
+export const evaluate = {
+    method: "get",
+    action: "evaluate",
+    path: "/evaluate",
+    controller: controller.evaluate
+}
+
 export const wait = {
     method: "get",
     action: "wait",
@@ -56,5 +63,6 @@ export default [
     router,
     type,
     wait,
+    evaluate,
     exit
 ]
